# hermione

./: .gitignore  Cargo.toml  Dockerfile  Gemfile  Makefile  Makefile.toml  README.adoc  README.md  hermione.yml  toast.yml
.github/workflows/: rust-ci.yml
.rpm/: hermione.spec
AppDir/: .DirIcon  AppRun  herm.desktop
example-package/: a  hermione.yml
src/: action.rs  cli.rs  config.rs  downloaded_package.rs  downloader.rs  file_mapping.rs  file_mapping_definition.rs  git_downloader.rs  hook.rs  hooks.rs  installed_package.rs  logger.rs  main.rs  manifest.rs  package.rs  package_service.rs  packer.rs  scaffold.rs
src/actions/: implode_action.rs  info_action.rs  init_action.rs  install_action.rs  list_action.rs  mod.rs  new_action.rs  package_action.rs  publish_action.rs  remove_action.rs  repo_action.rs  update_action.rs  upgrade_action.rs
src/repositories/: available_package.rs  available_version.rs  mod.rs  package_index.rs  remote_repository.rs  repository_contents.rs
templates/: hermione_manifest_tpl.yml
tests/: smoke_tests.rs
