[package]
name = "hermione"
version = "0.1.0"
authors = ["Jonathan E. Magen <yonkeltron@gmail.com>"]
edition = "2018"
readme = "README.adoc"
homepage = "https://github.com/yonkeltron/hermione"
repository = "https://github.com/yonkeltron/hermione"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "herm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = "2.33"
colored = "1.9.2"
confy = "0.3.1"
fs_extra = "1.1.0"
git2 = "0.10"
home = "0.5.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8"
tera = "1"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
