[package]
name = "hermione"
version = "0.3.0"
authors = ["Jonathan E. Magen <yonkeltron@gmail.com>", "Egli Hila <eggfoobar@gmail.com>"]
edition = "2018"
description = "Competent magic for your config files and more"
readme = "README.adoc"
homepage = "https://www.hermione.dev"
repository = "https://github.com/yonkeltron/hermione"
license = "Apache-2.0"
exclude = ["assets", "example-package", "public"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "herm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = "2.33"
fs_extra = "1.1.0"
git2 = "0.11"
lockfile = "0.2.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8.11"
tera = "1.0.2"
directories = "2.0.2"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2.4.0"
slog-term = "2.5.0"
slog-json = "2.3.0"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
scopeguard = "1.0.0"
