[package]
name = "hermione"
version = "0.7.1"
authors = ["Jonathan E. Magen <yonkeltron@gmail.com>", "Egli Hila <eggfoobar@gmail.com>"]
edition = "2018"
description = "Competent magic for your config files and more"
readme = "README.md"
homepage = "https://www.hermione.dev"
repository = "https://github.com/yonkeltron/hermione"
license = "Apache-2.0"
exclude = ["assets", "example-package", "public"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "herm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = "2.33"
confy = "0.4"
directories = "2.0.2"
duckscript = "0.3.1"
duckscriptsdk = "0.3.3"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
fs_extra = "1.1.0"
lockfile = "0.2.2"
openssl = { version = "0.10", features = ["vendored"] }
paris = "1.5"
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8.11"
ssri = "5.0"
tar = "0.4"
tera = "1.0.2"
toml = "0.5"
reqwest = { version = "0.10", features = ["blocking"] }
tempfile = "3"
url = "2.2.0"

[dev-dependencies]
assert_cmd = "1.0"
assert_fs = "1.0"
predicates = "1.0"
quickcheck = "0.9"
quickcheck_macros = "0.9"
scopeguard = "1.0"
